--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ final_toy_lgssm/toy_identifiedsystem_PEM.mat
 final_toy_lgssm/toy_lgssm_data_timeeval.csv
 final_narendra_li/narendra_li_data_performance.csv
 final_narendra_li/narendra_li_data_timeeval.csv
+# log
+nohup.out
